<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
                  xmlns:android="http://schemas.android.com/apk/res/android"
                  tools:context=".SettingsActivity"
                  android:icon="@null">
    <PreferenceCategory
            android:title="@string/options"
            android:layout="@layout/preference_category">
        <craftslab.werobot.activities.SeekBarPreference
                android:key="pref_send_delay"
                android:title="@string/send_with_delay"
                pref_kind="pref_send_delay"
                android:layout="@layout/preference_checkbox"/>
        <EditTextPreference
                android:dialogTitle="@string/set_receiver_name"
                android:key="pref_set_receiver"
                android:title="@string/set_receiver_name"
                android:layout="@layout/preference_checkbox"/>
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="pref_send_random"
                android:title="@string/send_random_msg"
                android:layout="@layout/preference_checkbox"/>
        <EditTextPreference
                android:dialogTitle="@string/msg_content"
                android:key="pref_msg_content"
                android:title="@string/msg_content"
                android:layout="@layout/preference_checkbox"/>
        <EditTextPreference
                android:dialogTitle="@string/msg_len"
                android:key="pref_msg_len"
                android:title="@string/msg_len"
                android:layout="@layout/preference_checkbox"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/about"
            android:layout="@layout/preference_category">
        <Preference
                android:key="pref_etc_issue"
                android:title="@string/help_and_feedback"
                android:summary="@string/help_hint"
                android:layout="@layout/preference_checkbox"/>
    </PreferenceCategory>
</PreferenceScreen>
